--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <span class="say">Happy Birthday 🎈</span><br>
                     <span class="say">May God bless you 🍀</span><br>
                     <span class="say">And give u many happiness 💕</span><br>
-                    <span class="say">Really you're pretty awesome ❤️</span><br>
+                    <span class="say">Really you're very pretty ❤️</span><br>
                     <span class="say">Sending good vibes and maybe a wink 😉</span><br>
                     <span class="say">Hope u have a great day today ❤️😘</span><br>
                 </div>
@@ -179,3 +179,4 @@
     </script>
 </body>
 </html>
+
