--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Tree</title>	    
+    <title>A special Moment</title>	    
     <link type="text/css" rel="stylesheet" href="file/default.css">
     <script type="text/javascript" src="file/jquery.min.js"></script>
     <script type="text/javascript" src="file/jscex.min.js"></script>
@@ -30,13 +30,13 @@
         <div id="wrap">
             <div id="text">
                 <div id="code">
-                    <span class="say">Hey you 💞</span><br>
-                    <span class="say">Happy Birthday 🎈</span><br>
+                    <span class="say">Hello, Madam ji 😊</span><br>
+                    <span class="say">Happy Birthday 🎈</span><br><br>
                     <span class="say">May God bless you 🍀</span><br>
                     <span class="say">And give u many happiness 💕</span><br>
-                    <span class="say">Really you're very pretty ❤️</span><br>
-                    <span class="say">Sending good vibes and maybe a wink 😉</span><br>
-                    <span class="say">Hope u have a great day today ❤️😘</span><br>
+                    <span class="say">Really you're very pretty ❤️</span><br><br>
+                    <span class="say">Good vibes coming your way, plus a mischievous wink 😉</span><br>
+                    <span class="say">Hope u have a great day today ❤️</span><br>
                 </div>
             </div>
            
