--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         <div id="wrap">
             <div id="text">
                 <div id="code">
-                    <span class="say">Hello, Madam ji 😊</span><br>
                     <span class="say">Happy Birthday 🎈</span><br><br>
+                    <span class="say">Madam ji 😊</span><br>
                     <span class="say">May God bless you 🍀</span><br>
                     <span class="say">And give u many happiness 💕</span><br>
                     <span class="say">Really you're very pretty ❤️</span><br><br>
@@ -179,4 +179,5 @@
     </script>
 </body>
 </html>
+
 
